[package]
name = "fullstack-auth-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
dioxus = { version = "0.7.9", features = ["fullstack", "router"] }
dioxus-web = { version = "0.7.9", features = ["hydrate"], optional = true }

# The library — pulled in with the UI components and every capability
# the example surfaces (MFA, mail, OAuth, ratelimit). These capability
# features have to be on for BOTH the wasm/client and server builds so
# the dioxus `#[post]` macro generates the client-side stub. Bare
# `dep:` crates (totp-rs, lettre, oauth2, reqwest, tower_governor) only
# get used from inside `#[cfg(feature = "server")]` blocks in dx-auth,
# so they're inert on the wasm side.
dx-auth = { path = "../../crates/dx-auth", default-features = false, features = [
    "ui",
    "mfa",
    "mail",
    "oauth-github",
    "ratelimit",
] }

# Server-side deps the example still touches directly (sqlx for the pool +
# migrations, axum_session_auth for the Auth/Rights check in get_permissions).
axum = { version = "0.8.4", default-features = false, optional = true, features = ["macros"] }
tokio = { version = "1.48", features = ["full"], optional = true }
sqlx = { version = "0.8.6", features = [
    "macros",
    "migrate",
    "sqlite",
    "_unstable-all-types",
    "tls-native-tls",
    "runtime-tokio",
], optional = true }
axum_session_auth = { version = "0.16.0", optional = true }

execute = "0.2.13"
serde = { version = "1.0.225", features = ["derive"] }
anyhow = "1.0.98"

[features]
default = ["web", "server"]
server = [
    "dioxus/server",
    "dep:axum",
    "dep:tokio",
    "dep:sqlx",
    "dep:axum_session_auth",
    "dx-auth/server",
    "dx-auth/sqlite",
]
web = ["dioxus/web", "dep:dioxus-web"]
