[package]
name = "dioxus-fullstack-example"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
dioxus = { version = "0.7.9", features = ["fullstack", "router"] }
dioxus-web = { version = "0.7.9", features = ["hydrate"], optional = true }

# The Dioxus adapter — pulled in with the UI components and every capability
# the example surfaces (MFA, mail, OAuth, ratelimit). These capability
# features have to be on for BOTH the wasm/client and server builds so
# the dioxus `#[post]` macro generates the client-side stub. The actual
# backend crates (totp-rs, lettre, oauth2, reqwest, tower_governor) live in
# the `arium` engine, which arium-dioxus only pulls in under its `server`
# feature on non-wasm targets, so they're inert on the wasm side.
arium-dioxus = { path = "../../crates/arium-dioxus", default-features = false, features = [
    "ui",
    "mfa",
    "mail",
    "oauth-github",
    "ratelimit",
    "tokens",
] }

# Server-side deps the example still touches directly (sqlx for the pool +
# migrations, axum_session_auth for the Auth/Rights check in get_permissions).
axum = { version = "0.8.4", default-features = false, optional = true, features = ["macros"] }
sqlx = { version = "0.8.6", features = [
    "macros",
    "migrate",
    "sqlite",
    "_unstable-all-types",
    "tls-native-tls",
    "runtime-tokio",
], optional = true }
axum_session_auth = { version = "0.16.0", optional = true }

# Pinned to an explicit `rev` to match the adapter crate — see the note in
# crates/arium-dioxus/Cargo.toml. Keep these two revs in lockstep.
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", rev = "837c9d4c1c9f99b19de7a3f087d8af1b0538dcae", version = "0.0.1", default-features = false }

[features]
default = ["web", "server"]
server = [
    "dioxus/server",
    "dep:axum",
    "dep:sqlx",
    "dep:axum_session_auth",
    "arium-dioxus/server",
    "arium-dioxus/sqlite",
]
web = ["dioxus/web", "dep:dioxus-web"]

# Optional: Google sign-in via the OIDC engine. Off by default (keeps the
# openidconnect crate out of the default build). Enable with
# `dx serve --features oauth-google` plus GOOGLE_CLIENT_ID / GOOGLE_CLIENT_SECRET.
oauth-google = ["server", "arium-dioxus/oauth-google"]

# dioxus-web is dragged in only for its `["hydrate"]` feature, which wires
# the wasm-side hydration runtime — there's no `dioxus_web::*` call site for
# machete to find, but dropping the dep would silently disable hydration.
[package.metadata.cargo-machete]
ignored = ["dioxus-web"]
