[package]
name = "leptos-fullstack-example"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8", default-features = false }
leptos_router = { version = "0.8", default-features = false }
leptos_meta = { version = "0.8", default-features = false }
arium-leptos = { path = "../../crates/arium-leptos", default-features = false, features = [
    "ui",
    "mfa",
    "mail",
    "oauth-github",
    "ratelimit",
    "tokens",
] }
anyhow = "1"

# Server-only deps (the axum host, runtime, db pool, Leptos axum integration).
axum = { version = "0.8.4", optional = true }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "net"], optional = true }
# The sqlx driver (`sqlite`/`postgres`) is added by the matching backend feature
# below, not pinned here — it must track arium's compile-time backend choice.
sqlx = { version = "0.9.0", default-features = false, features = [
    "macros",
    "migrate",
    "_unstable-all-types",
    "tls-native-tls",
    "runtime-tokio",
], optional = true }
leptos_axum = { version = "0.8", optional = true }

# Client/wasm hydration entrypoint deps.
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["ssr", "sqlite"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:sqlx",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "arium-leptos/ssr",
]

# Backend selection — enable exactly one, matching arium's compile-time choice
# (`arium` has a `compile_error!` if both are on). `default` ships `sqlite`; for
# Postgres, build with `cargo leptos build --release --bin-features ssr,postgres`.
sqlite = ["arium-leptos/sqlite", "sqlx/sqlite"]
postgres = ["arium-leptos/postgres", "sqlx/postgres"]

hydrate = [
    "leptos/hydrate",
    "arium-leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
]

# Optional: Google sign-in via the OIDC engine. Off by default (keeps the
# openidconnect crate out of the default build). Enable with
# `--features oauth-google` plus GOOGLE_CLIENT_ID / GOOGLE_CLIENT_SECRET.
oauth-google = ["ssr", "arium-leptos/oauth-google"]

[package.metadata.leptos]
output-name = "leptos-fullstack-example"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:3000"
reload-port = 3001
# Includes the default `sqlite` backend; the Postgres build overrides this with
# `cargo leptos build --bin-features ssr,postgres`.
bin-features = ["ssr", "sqlite"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
