[package]
name = "leptos-rbac-example"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

# The Leptos parallel of dioxus-rbac-example: the smallest faithful demo of
# arium's *global RBAC* authorization. Roles carry flat permission *tokens*, a
# cosmetic `PermissionGate` shows/hides a control, and a server fn re-checks the
# token on every request — the real boundary. A self-service "grant me the
# editor role" toggle stands in for an admin assigning roles, so one fresh
# account can watch both the allow and deny paths. Deliberately omits OAuth /
# MFA / mail / API tokens / rate limiting so the RBAC story stands alone. For
# the everything-on tour see ../leptos-fullstack-example.

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8", default-features = false }
leptos_router = { version = "0.8", default-features = false }
leptos_meta = { version = "0.8", default-features = false }
# The adapter, with only the UI components (for `PermissionGate` + `LoginPanel`).
# No capability features — this example demonstrates one axis, and building
# without `mail` means signup logs you straight in.
arium-leptos = { path = "../../crates/arium-leptos", default-features = false, features = ["ui"] }
anyhow = "1"

# Server-only deps: the axum host + runtime + sqlx pool, and the Leptos axum
# integration (for `leptos_axum::extract` in the RBAC server fns). No
# `async-trait` here — unlike the membership example, RBAC needs no
# app-implemented trait.
axum = { version = "0.8.4", optional = true }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "net"], optional = true }
sqlx = { version = "0.9.0", default-features = false, features = [
    "macros",
    "migrate",
    "runtime-tokio",
], optional = true }
leptos_axum = { version = "0.8", optional = true }

# Client/wasm hydration entrypoint deps.
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["ssr", "sqlite"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:sqlx",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "arium-leptos/ssr",
]

# Backend selection — enable exactly one, matching arium's compile-time choice.
# Only the bin (`ssr`) build turns this on (see `bin-features` below), so the
# non-weak `sqlx/sqlite` is fine — the hydrate build never sees it.
sqlite = ["arium-leptos/sqlite", "sqlx/sqlite"]
postgres = ["arium-leptos/postgres", "sqlx/postgres"]

hydrate = [
    "leptos/hydrate",
    "arium-leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
]

[package.metadata.leptos]
output-name = "leptos-rbac-example"
# Distinct from the other leptos examples' site-roots / dev ports so the
# build artifacts and dev servers don't collide.
site-root = "target/site-rbac"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:3200"
reload-port = 3201
bin-features = ["ssr", "sqlite"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
